first settings of app Header chnaged

--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,4 +1,4 @@
-.header{
+header{
     height: 200px;
-    background: url("../assets/images/header-background.jpg");
+    background: url('../assets/images/header-background.jpg');
 }
